# parallel-pod

./: CMakeLists.txt  README.md
src/: pod.cpp  rec.cpp  utils.cpp  utils.h
test/example.laminarVortexShedding/: README.md  cylinder.m0.5.geo  cylinder.m0.5.msh  log.gmshToFoam  runscript.pod  runscript.pod.reconstruct  runscript.solve
test/example.laminarVortexShedding/0/: vorticity
test/example.laminarVortexShedding/constant/: transportProperties
test/example.laminarVortexShedding/constant/polyMesh/: boundary
test/example.laminarVortexShedding/plot/: modeToVTK.py  plot_ClCd.p  plot_ClCd_Re100.eps  plot_apod.p  plot_spectrum.p
test/example.laminarVortexShedding/postProcessing/internalField/: listDif.tmp
test/example.laminarVortexShedding/postProcessing/internalField/150.1/: cloud_U.xy
test/example.laminarVortexShedding/postProcessing/internalField/150.2/: cloud_U.xy
test/example.laminarVortexShedding/postProcessing/internalField/150.3/: cloud_U.xy
test/example.laminarVortexShedding/postProcessing/internalField/150.4/: cloud_U.xy
test/example.laminarVortexShedding/postProcessing/internalField/150.5/: cloud_U.xy
test/example.laminarVortexShedding/postProcessing/internalField/150.6/: cloud_U.xy
test/example.laminarVortexShedding/postProcessing/internalField/150.7/: cloud_U.xy
test/example.laminarVortexShedding/system/: controlDict
test/example.laminarVortexShedding/system/pod/: createTimeList.sh
test/example.laminarVortexShedding/system/sampling/: eraseCoordinatesAuto.sh  internalCloud  pointCloud.xy
(+194 files in other folders)
